# dongle-bridge

./: .gitignore  README.md  west.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_and_test.yml
app/: CMakeLists.txt  prj.conf  sample.yaml
app/cmake/: flags.cmake
app/include/: app_logic.h  ble_if.h  msg.h  port.h  sum.h  transaction.h  usb_if.h
app/include/core/: app_core.h
app/include/hal/usb/: usb_if.h
app/overlays/: sanitizers.conf
app/src/: main.c  sum.c
app/src/app/: app_logic.c  port.c
app/src/core/: app_core.c
app/src/hal/: ble_if_zephyr.c  usb_if_zephyr.c
app/src/hal/usb/: usb_cdc_hw.c  usb_cdc_mock.c
app/src/main/hw/: main.c
app/src/main/native/: main.c
app/tests/app_logic/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/app_logic/src/: fake_port.c  test_app_logic.c
app/tests/sum_test/: CMakeLists.txt  testcase.yaml
app/tests/sum_test/src/: test_sum.c
archive/: Dockerfile  build.yml  ci-coverage.yml  ci-local-test.sh  ci-main.yml  ci-pr.yml  docker-publish.yml
scripts/: sanitizer-build.sh
